--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
-    "@react-navigation/native": "^5.4.0",
+    "@react-navigation/native": "^5.4.3",
     "@react-navigation/stack": "^5.3.7",
+    "@unform/core": "^2.1.0",
+    "@unform/mobile": "^2.1.0",
     "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-linear-gradient": "~8.1.0",
